
--Added a priority ranking for temporary home arrows (EXPT/MAP is top,
  LEAD/SUPP is middle, and BABY is low priority).  This prevents less-important
  home arrows from interrupting your more intentional and directed home arrows.
  If you're out actively searching for an expert, you don't need constant
  arrows pointing back to new babies at home.  Fixes #570



Server Fixes

--Fixed to send homeland info for your spawn position.  Fixes #567

--You get +MORE FOOD+ above your head when an action fails due to hungry work.
  Fixes #568

--Nomad Eves (with no well and no homeland) no longer lose their reproduction
  capabilities permanently when they enter other homelands.  They still need to
  leave the other homeland to have babies (but get +FREE REIN+ status when they
  leave).



Version 316    2020-March-12

--100-radius homelands around wells, where family that built well feels
  comfortable enough to have babies.  Leaving this area makes you homesick.

--Expert-finder way stones occure along ley lines in specialist biomes.
  Touching one points you toward the nearest expert for that biome.

--Fixed issue with some partially-used objects not being containable on table
  (use dummies have # appended to name, which was interfering with the end of
  +cont tags).  Fixes #560
 
--Fixed baby bones (SIDS) grave identity tracking.  Fixes #559

--Hunger chimes can now play right up until when final music starts
  (previously, there was a 23-second gap where music hadn't started playing
  yet, but hunger chimes were still muted).

--Support for forcing USE when trying to DROP an object into an empty
  container where a consuming transition applies (so instead of containing the
  held item, it is used on the empty container).  Example:  stacking grapes in
  an empty basket, even though grapes would otherwise be containable in the
  basket.  But if something else is already in the basket, the grapes go in
  next to it, like an ordinary containable item.